--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -680,6 +680,79 @@
         "print(f\"Polynomial Regression RMSE: {rmse}\")\n",
         "print(f\"Polynomial Regression MAE: {mae}\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Random Forest Regressor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "25/10/05 20:20:58 WARN DAGScheduler: Broadcasting large task binary with size 1096.0 KiB\n",
+            "25/10/05 20:21:01 WARN DAGScheduler: Broadcasting large task binary with size 1973.8 KiB\n",
+            "25/10/05 20:21:05 WARN DAGScheduler: Broadcasting large task binary with size 3.4 MiB\n",
+            "25/10/05 20:21:11 WARN DAGScheduler: Broadcasting large task binary with size 5.5 MiB\n",
+            "25/10/05 20:21:16 WARN DAGScheduler: Broadcasting large task binary with size 1269.1 KiB\n",
+            "25/10/05 20:21:18 WARN DAGScheduler: Broadcasting large task binary with size 8.5 MiB\n",
+            "25/10/05 20:21:23 WARN DAGScheduler: Broadcasting large task binary with size 1697.0 KiB\n",
+            "[Stage 58:>                                                         (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+------+------------------+\n",
+            "|SALARY|        prediction|\n",
+            "+------+------------------+\n",
+            "| 29120|113814.58716874561|\n",
+            "| 31200| 94809.94486191026|\n",
+            "| 31200|113814.58716874561|\n",
+            "| 31640| 93224.13236055654|\n",
+            "| 32240| 94906.26880308034|\n",
+            "+------+------------------+\n",
+            "only showing top 5 rows\n",
+            "Feature Importances: [np.float64(0.8517386696499264), np.float64(0.07819857305238018), np.float64(0.002008083394858557), np.float64(0.008844215980942505), np.float64(0.01029502112501853), np.float64(0.008698180639828784), np.float64(0.011074455493598177), np.float64(0.011797913401607891), np.float64(0.017344887261838835)]\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.ml.regression import RandomForestRegressor\n",
+        "\n",
+        "# choose hyperparameters \n",
+        "num_trees = 400\n",
+        "max_depth = 8\n",
+        "\n",
+        "# Initialize Random Forest Regressor\n",
+        "rf = RandomForestRegressor(featuresCol=\"features\", labelCol=\"SALARY\", \n",
+        "                           numTrees=num_trees, maxDepth=max_depth, seed=42)\n",
+        "\n",
+        "# Fit the model\n",
+        "rf_model = rf.fit(reg_train)\n",
+        "\n",
+        "# Predict on test data\n",
+        "predictions_rf = rf_model.transform(reg_test)\n",
+        "predictions_rf.select(\"SALARY\", \"prediction\").show(5)\n",
+        "\n",
+        "# Print feature importances\n",
+        "print(\"Feature Importances:\", list(rf_model.featureImportances))\n"
+      ]
     }
   ],
   "metadata": {
