PLR reasoning and insights

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -562,7 +562,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/05 19:48:35 WARN Instrumentation: [0d007fdc] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "25/10/05 20:31:26 WARN Instrumentation: [723b3c8e] regParam is zero, which might cause numerical instability and overfitting.\n",
             "                                                                                \r"
           ]
         },
@@ -570,38 +570,38 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "          Feature   Coefficient    Std Error    t-value       p-value  \\\n",
-            "0       Intercept  67932.172201   365.427981  34.124107  0.000000e+00   \n",
-            "1   PolyFeature_0  12469.903484    23.369295  -1.746680  8.071963e-02   \n",
-            "2   PolyFeature_1    -40.818670  6795.398159  -0.378451  7.051025e-01   \n",
-            "3   PolyFeature_2  -2571.726155  1051.916215  -1.110934  2.666199e-01   \n",
-            "4   PolyFeature_3  -1168.609779  2990.337025  -1.899043  5.758388e-02   \n",
-            "5   PolyFeature_4  -5678.777125  3572.973249  -2.128946  3.327990e-02   \n",
-            "6   PolyFeature_5  -7606.667528  2435.260898   3.109557  1.878259e-03   \n",
-            "7   PolyFeature_6   7572.582266  2501.762396   3.565968  3.639866e-04   \n",
-            "8   PolyFeature_7   8921.205741  3137.964205   7.286182  3.397282e-13   \n",
-            "9   PolyFeature_8  22863.778828    26.275186 -16.193368  0.000000e+00   \n",
-            "10  PolyFeature_9   -425.483749  3581.211738  18.969047  0.000000e+00   \n",
+            "                    Feature   Coefficient    Std Error    t-value  \\\n",
+            "0                 Intercept  67932.172201   365.427981  34.124107   \n",
+            "1      MIN_YEARS_EXPERIENCE  12469.903484    23.369295  -1.746680   \n",
+            "2   MIN_YEARS_EXPERIENCE_SQ    -40.818670  6795.398159  -0.378451   \n",
+            "3                  DURATION  -2571.726155  1051.916215  -1.110934   \n",
+            "4             IS_INTERNSHIP  -1168.609779  2990.337025  -1.899043   \n",
+            "5       COMPANY_IS_STAFFING  -5678.777125  3572.973249  -2.128946   \n",
+            "6    EMPLOYMENT_TYPE_NAME_A  -7606.667528  2435.260898   3.109557   \n",
+            "7    EMPLOYMENT_TYPE_NAME_B   7572.582266  2501.762396   3.565968   \n",
+            "8        REMOTE_TYPE_NAME_X   8921.205741  3137.964205   7.286182   \n",
+            "9        REMOTE_TYPE_NAME_Y  22863.778828    26.275186 -16.193368   \n",
+            "10       REMOTE_TYPE_NAME_Z   -425.483749  3581.211738  18.969047   \n",
             "\n",
-            "    95% CI Lower  95% CI Upper  \n",
-            "0   67215.871148  68648.473253  \n",
-            "1   12424.095687  12515.711281  \n",
-            "2  -13360.955886  13279.318546  \n",
-            "3   -4633.661011   -509.791298  \n",
-            "4   -7030.179413   4692.959856  \n",
-            "5  -12682.412944   1324.858694  \n",
-            "6  -12380.193459  -2833.141596  \n",
-            "7    2668.702078  12476.462454  \n",
-            "8    2770.261704  15072.149779  \n",
-            "9   22812.274990  22915.282666  \n",
-            "10  -7445.268409   6594.300910  \n"
+            "         p-value  95% CI Lower  95% CI Upper  \n",
+            "0   0.000000e+00  67215.871148  68648.473253  \n",
+            "1   8.071963e-02  12424.095687  12515.711281  \n",
+            "2   7.051025e-01 -13360.955886  13279.318546  \n",
+            "3   2.666199e-01  -4633.661011   -509.791298  \n",
+            "4   5.758388e-02  -7030.179413   4692.959856  \n",
+            "5   3.327990e-02 -12682.412944   1324.858694  \n",
+            "6   1.878259e-03 -12380.193459  -2833.141596  \n",
+            "7   3.639866e-04   2668.702078  12476.462454  \n",
+            "8   3.397282e-13   2770.261704  15072.149779  \n",
+            "9   0.000000e+00  22812.274990  22915.282666  \n",
+            "10  0.000000e+00  -7445.268409   6594.300910  \n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 37:>                                                         (0 + 1) / 1]\r"
+            "[Stage 82:>                                                         (0 + 1) / 1]\r"
           ]
         },
         {
@@ -648,9 +648,20 @@
         "# Critical t-value for 95% confidence interval\n",
         "critical_value_poly = t.ppf(0.975, dof_poly)\n",
         "\n",
-        "# Create DataFrame of coefficients\n",
+        "feature_poly_names = [\n",
+        "    \"MIN_YEARS_EXPERIENCE\", \"MIN_YEARS_EXPERIENCE_SQ\",\n",
+        "    \"DURATION\",\n",
+        "    \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\",\n",
+        "    \"EMPLOYMENT_TYPE_NAME_A\",  \n",
+        "    \"EMPLOYMENT_TYPE_NAME_B\",\n",
+        "    \"REMOTE_TYPE_NAME_X\",\n",
+        "    \"REMOTE_TYPE_NAME_Y\",\n",
+        "    \"REMOTE_TYPE_NAME_Z\"\n",
+        "]\n",
+        "\n",
+        "#create df\n",
         "coef_poly_df = pd.DataFrame({\n",
-        "    \"Feature\": [\"Intercept\"] + [f\"PolyFeature_{i}\" for i in range(p_poly)],\n",
+        "    \"Feature\": [\"Intercept\"] + feature_poly_names,\n",
         "    \"Coefficient\": [intercept_poly] + coefficients_poly.tolist(),\n",
         "    \"Std Error\": std_errors_poly,\n",
         "    \"t-value\": t_values_poly,\n",
@@ -685,26 +696,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "The polynomial regression model explains about 30% of the variance in salaries, showing that experience and job attributes influence pay, though much variation still remains unexplained. Significant predictors include remote and hybrid roles and all employment types meaningfully impact salaries.\n",
+        "\n",
+        "Non-significant terms with limited contributions, such as the quadratic minimum years of experience term, has a negative coefficient while the linear minimum years of experience is positive, suggesting that althought salary increaes with more experience, the increase slows down as experience grows and plateaus. Overall, the model highlights which job characteristics most strongly affect compensation while capturing some non-linear effects of experience."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Random Forest Regressor"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/05 20:20:58 WARN DAGScheduler: Broadcasting large task binary with size 1096.0 KiB\n",
-            "25/10/05 20:21:01 WARN DAGScheduler: Broadcasting large task binary with size 1973.8 KiB\n",
-            "25/10/05 20:21:05 WARN DAGScheduler: Broadcasting large task binary with size 3.4 MiB\n",
-            "25/10/05 20:21:11 WARN DAGScheduler: Broadcasting large task binary with size 5.5 MiB\n",
-            "25/10/05 20:21:16 WARN DAGScheduler: Broadcasting large task binary with size 1269.1 KiB\n",
-            "25/10/05 20:21:18 WARN DAGScheduler: Broadcasting large task binary with size 8.5 MiB\n",
-            "25/10/05 20:21:23 WARN DAGScheduler: Broadcasting large task binary with size 1697.0 KiB\n",
-            "[Stage 58:>                                                         (0 + 1) / 1]\r"
+            "25/10/05 20:25:18 WARN DAGScheduler: Broadcasting large task binary with size 1210.5 KiB\n",
+            "25/10/05 20:25:21 WARN DAGScheduler: Broadcasting large task binary with size 2.1 MiB\n",
+            "25/10/05 20:25:24 WARN DAGScheduler: Broadcasting large task binary with size 3.7 MiB\n",
+            "25/10/05 20:25:30 WARN DAGScheduler: Broadcasting large task binary with size 6.1 MiB\n",
+            "25/10/05 20:25:37 WARN DAGScheduler: Broadcasting large task binary with size 1402.3 KiB\n",
+            "[Stage 77:>                                                         (0 + 1) / 1]\r"
           ]
         },
         {
@@ -714,14 +732,14 @@
             "+------+------------------+\n",
             "|SALARY|        prediction|\n",
             "+------+------------------+\n",
-            "| 29120|113814.58716874561|\n",
-            "| 31200| 94809.94486191026|\n",
-            "| 31200|113814.58716874561|\n",
-            "| 31640| 93224.13236055654|\n",
-            "| 32240| 94906.26880308034|\n",
+            "| 29120|114624.66663326925|\n",
+            "| 31200| 96687.65499926287|\n",
+            "| 31200|114624.66663326925|\n",
+            "| 31640| 96228.91630692781|\n",
+            "| 32240| 95844.37906654779|\n",
             "+------+------------------+\n",
             "only showing top 5 rows\n",
-            "Feature Importances: [np.float64(0.8517386696499264), np.float64(0.07819857305238018), np.float64(0.002008083394858557), np.float64(0.008844215980942505), np.float64(0.01029502112501853), np.float64(0.008698180639828784), np.float64(0.011074455493598177), np.float64(0.011797913401607891), np.float64(0.017344887261838835)]\n"
+            "Feature Importances: [np.float64(0.8681171759565247), np.float64(0.06743212825429395), np.float64(0.0016313701554676735), np.float64(0.007622290249534043), np.float64(0.009574155828520737), np.float64(0.008389185582000717), np.float64(0.009964903639168394), np.float64(0.009171279424142545), np.float64(0.018097510910347166)]\n"
           ]
         },
         {
@@ -736,12 +754,12 @@
         "from pyspark.ml.regression import RandomForestRegressor\n",
         "\n",
         "# choose hyperparameters \n",
-        "num_trees = 400\n",
-        "max_depth = 8\n",
+        "num_trees = 450\n",
+        "max_depth = 7\n",
         "\n",
         "# Initialize Random Forest Regressor\n",
         "rf = RandomForestRegressor(featuresCol=\"features\", labelCol=\"SALARY\", \n",
-        "                           numTrees=num_trees, maxDepth=max_depth, seed=42)\n",
+        "                           numTrees=num_trees, maxDepth=max_depth, seed=51)\n",
         "\n",
         "# Fit the model\n",
         "rf_model = rf.fit(reg_train)\n",
