interepreting data for aic,bic, rsme of models

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -619,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -666,18 +666,17 @@
         "num_trees = 450\n",
         "max_depth = 7\n",
         "\n",
-        "# Initialize Random Forest Regressor\n",
+        "#make RFR\n",
         "rf = RandomForestRegressor(featuresCol=\"features\", labelCol=\"SALARY\", \n",
         "                           numTrees=num_trees, maxDepth=max_depth, seed=51)\n",
         "\n",
-        "# Fit the model\n",
+        "#fitting the model\n",
         "rf_model = rf.fit(reg_train)\n",
         "\n",
-        "# Predict on test data\n",
+        "#predictors\n",
         "predictions_rf = rf_model.transform(reg_test)\n",
         "predictions_rf.select(\"SALARY\", \"prediction\").show(5)\n",
         "\n",
-        "# Print feature importances\n",
         "print(\"Feature Importances:\", list(rf_model.featureImportances))\n"
       ]
     },
@@ -690,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -726,9 +725,7 @@
         "# Get all input columns from your assembler\n",
         "feature_cols = assembler.getInputCols()\n",
         "\n",
-        "# For vectorized categorical columns, you may need to flatten them\n",
-        "# This creates a list of feature names matching the length of feature vector\n",
-        "# Continuous features remain as-is, categorical vector columns get indexed as col_0, col_1, ...\n",
+        "#flatten vectored columns to match feature vector\n",
         "flattened_features = []\n",
         "for col_name in feature_cols:\n",
         "    dtype = dict(data.dtypes)[col_name]\n",
@@ -739,19 +736,18 @@
         "    else:\n",
         "        flattened_features.append(col_name)\n",
         "\n",
-        "# Extract feature importances from the Random Forest model\n",
+        "#extract feature importances from the RFR\n",
         "importances = rf_model.featureImportances.toArray()\n",
         "\n",
-        "# Create DataFrame for plotting\n",
+        "#create df\n",
         "feat_imp_df = pd.DataFrame({\n",
         "    \"Feature\": flattened_features,\n",
         "    \"Importance\": importances\n",
         "})\n",
         "\n",
-        "# Sort and get top 10\n",
+        "#sort and select top 10\n",
         "top_feats = feat_imp_df.sort_values(by=\"Importance\", ascending=False).head(10)\n",
         "\n",
-        "# Plot\n",
         "plt.figure(figsize=(10,6))\n",
         "sns.barplot(x=\"Importance\", y=\"Feature\", data=top_feats, palette=\"plasma\")\n",
         "plt.title(\"Top 10 Random Forest Feature Importances\")\n",
@@ -775,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -822,7 +818,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "# Generate predictions\n",
+        "#predictions\n",
         "pred_lr = lin_reg_fit.transform(reg_test).select(\"SALARY\", \"prediction\").toPandas()\n",
         "pred_lr.rename(columns={\"prediction\": \"Predicted\"}, inplace=True)\n",
         "\n",
@@ -832,7 +828,7 @@
         "pred_rf = rf_model.transform(reg_test).select(\"SALARY\", \"prediction\").toPandas()\n",
         "pred_rf.rename(columns={\"prediction\": \"Predicted\"}, inplace=True)\n",
         "\n",
-        "# Function to plot Actual vs Predicted\n",
+        "#plotting Actual vs Predicted\n",
         "def plot_actual_vs_predicted(df, model_name):\n",
         "    plt.figure(figsize=(6,6))\n",
         "    sns.scatterplot(x=\"SALARY\", y=\"Predicted\", data=df, alpha=0.6)\n",
@@ -844,10 +840,151 @@
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "# Plot each model\n",
         "plot_actual_vs_predicted(pred_lr, \"Linear Regression\")\n",
         "plot_actual_vs_predicted(pred_poly, \"Polynomial Regression\")\n",
         "plot_actual_vs_predicted(pred_rf, \"Random Forest\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "RMSE - Linear Regression: 32433.87\n",
+            "RMSE - Polynomial Regression: 30897.99\n",
+            "RMSE - Random Forest: 24941.84\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AIC - Linear Regression: 60941.54\n",
+            "AIC - Polynomial Regression: 60878.13\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 145:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "BIC - Linear Regression: 84857.93\n",
+            "BIC - Polynomial Regression: 84584.34\n",
+            "BIC - Random Forest (approx.): 86841.66\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "\n",
+        "preds_lr = lin_reg_fit.transform(reg_test).withColumnRenamed(\"prediction\", \"LR_Prediction\")\n",
+        "preds_poly = poly_model.transform(reg_test).withColumnRenamed(\"prediction\", \"Poly_Prediction\")\n",
+        "preds_rf = rf_model.transform(reg_test).withColumnRenamed(\"prediction\", \"RF_Prediction\")\n",
+        "\n",
+        "#combine predictions into one df\n",
+        "combined_preds = preds_lr.join(preds_poly.select(\"Poly_Prediction\", \"SALARY\"), on=\"SALARY\") \\\n",
+        "                         .join(preds_rf.select(\"RF_Prediction\", \"SALARY\"), on=\"SALARY\")\n",
+        "\n",
+        "#RMSE calculations\n",
+        "evaluator = RegressionEvaluator(labelCol=\"SALARY\", metricName=\"rmse\")\n",
+        "\n",
+        "rmse_lr = evaluator.evaluate(combined_preds.withColumnRenamed(\"LR_Prediction\", \"prediction\"))\n",
+        "rmse_poly = evaluator.evaluate(combined_preds.withColumnRenamed(\"Poly_Prediction\", \"prediction\"))\n",
+        "rmse_rf = evaluator.evaluate(combined_preds.withColumnRenamed(\"RF_Prediction\", \"prediction\"))\n",
+        "\n",
+        "print(f\"RMSE - Linear Regression: {rmse_lr:.2f}\")\n",
+        "print(f\"RMSE - Polynomial Regression: {rmse_poly:.2f}\")\n",
+        "print(f\"RMSE - Random Forest: {rmse_rf:.2f}\")\n",
+        "\n",
+        "n = reg_test.count()\n",
+        "\n",
+        "#aic for lr\n",
+        "p_lr = len(lin_reg_fit.coefficients)\n",
+        "rss_lr = lin_reg_fit.summary.meanSquaredError * n\n",
+        "aic_lr = n * math.log(rss_lr / n) + 2 * p_lr\n",
+        "print(f\"AIC - Linear Regression: {aic_lr:.2f}\")\n",
+        "\n",
+        "#aic for poly\n",
+        "p_poly = len(poly_model.coefficients)\n",
+        "rss_poly = poly_model.summary.meanSquaredError * n\n",
+        "aic_poly = n * math.log(rss_poly / n) + 2 * p_poly\n",
+        "print(f\"AIC - Polynomial Regression: {aic_poly:.2f}\")\n",
+        "\n",
+        "\n",
+        "# Linear\n",
+        "rss_lr_sum = combined_preds.withColumn(\"sq_err_lr\", (col(\"SALARY\") - col(\"LR_Prediction\"))**2) \\\n",
+        "                           .groupBy().sum(\"sq_err_lr\").collect()[0][0]\n",
+        "ll_lr = -n/2 * (math.log(2*math.pi) + 1 - math.log(n) + math.log(rss_lr_sum))\n",
+        "\n",
+        "# Polynomial\n",
+        "rss_poly_sum = combined_preds.withColumn(\"sq_err_poly\", (col(\"SALARY\") - col(\"Poly_Prediction\"))**2) \\\n",
+        "                             .groupBy().sum(\"sq_err_poly\").collect()[0][0]\n",
+        "ll_poly = -n/2 * (math.log(2*math.pi) + 1 - math.log(n) + math.log(rss_poly_sum))\n",
+        "\n",
+        "# Random Forest\n",
+        "rss_rf_sum = combined_preds.withColumn(\"sq_err_rf\", (col(\"SALARY\") - col(\"RF_Prediction\"))**2) \\\n",
+        "                           .groupBy().sum(\"sq_err_rf\").collect()[0][0]\n",
+        "ll_rf = -n/2 * (math.log(2*math.pi) + 1 - math.log(n) + math.log(rss_rf_sum))\n",
+        "\n",
+        "# -----------------------------\n",
+        "# 5. BIC calculation\n",
+        "# -----------------------------\n",
+        "\n",
+        "# Number of parameters\n",
+        "k_lr = len(lin_reg_fit.coefficients) + 1\n",
+        "k_poly = len(poly_model.coefficients) + 1\n",
+        "k_rf = num_trees  # approximate\n",
+        "\n",
+        "# Log-likelihoods (already computed as ll_lr, ll_poly, ll_rf)\n",
+        "bic_lr = -2 * ll_lr + k_lr * math.log(n)\n",
+        "bic_poly = -2 * ll_poly + k_poly * math.log(n)\n",
+        "bic_rf = -2 * ll_rf + k_rf * math.log(n)\n",
+        "\n",
+        "print(f\"BIC - Linear Regression: {bic_lr:.2f}\")\n",
+        "print(f\"BIC - Polynomial Regression: {bic_poly:.2f}\")\n",
+        "print(f\"BIC - Random Forest (approx.): {bic_rf:.2f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Random Forest provides the most accurate salary predictions, achieving the lowest RMSE (24,942), while polynomial regression improves over linear regression (30,898 vs 32,434) by capturing simple nonlinear effects. \n",
+        "\n",
+        "In terms of model fit, polynomial regression shows slightly better AIC and BIC values than linear regression, indicating it balances complexity and explanatory power. Random Forest, despite a higher approximate BIC due to its complexity, outperforms both parametric models in prediction, highlighting its ability to capture complex feature interactions. \n",
+        "\n",
+        "Overall, Random Forest is best for predictive performance, whereas polynomial regression offers a reasonable trade-off between fit and interpretability."
       ]
     }
   ],
