made final edits and render docx and pdf

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -23,12 +23,42 @@
         "    theme: cerulean\n",
         "    toc: true\n",
         "    toc-depth: 2\n",
+        "  docx: default\n",
+        "  pdf: default\n",
         "\n",
         "execute:\n",
         "  echo: false\n",
         "  eval: false\n",
         "  freeze: auto\n",
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Generative AI Disclaimer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Generative AI (ChatGPT) was used to better understand the several dataframes created, their pipeline architecture, and debugging issues."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Github Repository Link"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "https://github.com/met-ad-688/assignment-04-tanyasiii"
       ]
     },
     {
